--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
               run: npm install 
 
             - name: Run tests
-              run: npx playwright test
+              run: npm run tests:e2e
